회원탈퇴 로직 오류 수정